contactdata text align fixed

--- a/src/views/ContactView/ContactView.css
+++ b/src/views/ContactView/ContactView.css
@@ -35,6 +35,7 @@
   margin-top: 2vh;
   font-size: 1.8vh;
   font-family: "fredoka";
+  text-align: left;
 }
 
 .main-right {
